force-app/main/default/objects/Bracket_Scenario__c/Bracket_Scenario__c.object-meta.xml
<CustomObject>
    <label>Bracket Scenario</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Scenario Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bracket Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>