force-app/main/default/objects/Bracket_Scenario__c/fields/Biggest_Upset__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Upset__c</fullName>
    <label>Biggest Upset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>