force-app/main/default/objects/Bracket_Scenario__c/fields/Bracket_JSON__c.field-meta.xml
<CustomField>
    <fullName>Bracket_JSON__c</fullName>
    <label>Bracket JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>