force-app/main/default/objects/Bracket_Scenario__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <label>Champion</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Champion Scenarios</relationshipLabel>
    <relationshipName>Champion_Scenarios</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>