force-app/main/default/objects/Bracket_Scenario__c/fields/Final_Four_Summary__c.field-meta.xml
<CustomField>
    <fullName>Final_Four_Summary__c</fullName>
    <label>Final Four Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>