force-app/main/default/objects/Bracket_Scenario__c/fields/Overall_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Overall_Confidence__c</fullName>
    <label>Overall Confidence</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>