force-app/main/default/objects/Bracket_Scenario__c/fields/Runner_Up__c.field-meta.xml
<CustomField>
    <fullName>Runner_Up__c</fullName>
    <label>Runner Up</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Runner Up Scenarios</relationshipLabel>
    <relationshipName>Runner_Up_Scenarios</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>