force-app/main/default/objects/Bracket_Scenario__c/fields/Scenario_Name__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Name__c</fullName>
    <label>Scenario Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>