force-app/main/default/objects/Bracket_Scenario__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>