force-app/main/default/objects/Bracket_Scenario__c/fields/Total_Upsets__c.field-meta.xml
<CustomField>
    <fullName>Total_Upsets__c</fullName>
    <label>Total Upsets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>